...
                                self.initialScrollDone = true
                            }
                        }
                    })
                    Spacer()
                }
                .accessibilityLabel("songListScrollView")
                .background(GeometryReader { scrollViewGeom in
                    self.theme.colorBg
                        .preference(
                            key: FrameKey.self,
                            // See discussion!
                            value: scrollViewGeom.frame(in: .global)
...
                                self.onPerformAction(DrawerClick())
                            }
                        }) {
                            Image("ic_drawer")
                                .resizable()
                                .frame(width: 32.0, height: 32.0)
                                .accessibilityLabel("drawerButton")
                        }, trailing: Spacer())
                .navigationTitle(
                    Text(self.localState.currentArtist)
                )
                .navigationBarTitleDisplayMode(.inline)
                .navigationBarItems(trailing: Button(action: {
...
